--- a/style.css
+++ b/style.css
@@ -18,17 +18,38 @@
 }
     /*Fin de Cabecera*/
 
-
-
-
+    /*Inicio*/
+.main__inicio{
+    background-image: url(./imagen/imageninicio2.jpg);
+    height: 50rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: auto;
+}
+.inicio__texto1{
+    font-size: 2.5rem;
+    font-weight: 800;
+    color: #FECF07;
+    margin: 10rem 0rem 5rem 0rem;
+}
+.inicio__texto2{
+    font-size: 2.5rem;
+    font-weight: 500;
+    color: white;
+}
+.incio__texto3{
+    text-decoration: none;
+    color: white;
+    font-size: 1.5rem;
+    margin-top: 4rem;
+}
 
     /*Footer*/
 .footer{
     background-color: black;
 }    
-.footer__secciones {
-    color: yellow;
-}
+
 .secciones p{
     color: white;
 }
