--- a/style.css
+++ b/style.css
@@ -166,9 +166,51 @@
     font-weight: 800;
     margin-bottom: 10rem;
     }
+    /*Fin de Viviendas*/
 
+    /*Contacto*/
+    .contacto__titulo{
+        color: #FECF07 ;
+        font-family: museosans_900;
+        margin: 1rem 0rem;
+    
+    }
+    .contacto__titulo--texto{
+        text-align: center;
+        font-size: 20px;
+        font-weight: 800;
+        font-family: museosans_900;
+    
+    }
+    .contacto__img--ubicacion{
+        width: 100px;
+        margin-top: 1rem;
+        margin-bottom: -1rem;
+        
+    }
+    
+    .contacto__img--email{
+        width: 100px;
+        margin-bottom: -1rem;
+        
+    }
+    .contacto__email--text{
+        text-align: center;
+        margin-left: -1rem;
+        margin-bottom: 2rem;
+    }
+    .contacto__consulta{
+        font-family: museosans_900;
+        font-size: 18px;
+        margin-bottom: 1rem;
+    }
 
-
+    .form-control{
+        width: 300px;
+    }
+    .textarea{
+        height: 30px;
+    }
 
 
     /*Footer*/
