--- a/style.css
+++ b/style.css
@@ -35,8 +35,10 @@
     margin-left: 20px;
 }
 .nav-link{
-    font-size: 20px;
+    font-size: 15px;
+    color: white !important;
 }
+
     /*Fin de Cabecera*/
 
     /*Inicio*/
