cambios en el nav en todas las paginas

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 
     /*Inicio*/
 .main__inicio{
-    background-image: url(./imagen/imageninicio2.jpg);
+    background-image: url(./imagen/imageninicio.jpg);
     height: 50rem;
     background-repeat: no-repeat;
     background-size: cover;
