--- a/style.css
+++ b/style.css
@@ -45,16 +45,25 @@
 .main__inicio{
     background-image: url(./imagen/imageninicio.jpg);
     height: 50rem;
+    object-fit:cover;
+    object-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     width: auto;
+    overflow: hidden;
 }
+.sticker{
+    width: 30rem;
+    position: relative;
+    margin-top: -15rem;
+}
+
 .inicio__texto1{
     font-size: 2.5rem;
     font-weight: 800;
     color: #FECF07;
-    margin: 10rem 0rem 5rem 0rem;
+    margin: 0rem 0rem 5rem 0rem;
 }
 .inicio__texto2{
     font-size: 2.5rem;
