--- a/style.css
+++ b/style.css
@@ -38,9 +38,11 @@
     margin-left: 20px;
 }
 .nav-link{
-    font-size: 15px;
+    font-size: 18px;
     color: white !important;
+    font-family: poppins-extralight;
 }
+
 
     /*Fin de Cabecera*/
 
@@ -63,21 +65,24 @@
 }
 
 .inicio__texto1{
-    font-size: 2.5rem;
-    font-weight: 800;
-    color: #FECF07;
+    font-size: 35px;
+    color: white;
     margin: 0rem 0rem 5rem 0rem;
+    font-family: jersey_m54;
 }
 .inicio__texto2{
-    font-size: 2.5rem;
-    font-weight: 500;
+    font-size: 51px;
     color: white;
+    font-family: jersey_m54;
+    padding-bottom: 50px;
 }
 .incio__texto3{
     text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-    margin-top: 4rem;
+    color: white !important; /*No me deja igual que el Nav*/
+    font-size: 25px;
+    background-color: #FECF07;
+    padding: 4px 10px;
+    border-radius: 10px;
 }
     /*Fin de Inicio*/
 
@@ -232,7 +237,10 @@
     background-color: black;
 }    
 
-.secciones p{
+.secciones {
     color: white;
+}
+.footer__secciones{
+    color: #FECF07;
 }
 /*Fin de Footer*/
