--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@
     /*Nosotros*/
 .img-fluid{
     width: auto;
-    margin: 10px;
+    margin: 10px 10px 10px px;
     
 }
 .nosotros__titulo{
@@ -98,6 +98,7 @@
     align-self: flex-start;
     justify-self: flex-end;
     margin: 10px;
+    
     
 }
 .nosotros__titulo--texto{
