--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@
     font-family: jersey_m54;
     padding-bottom: 50px;
 }
-.incio__texto3{
+.inicio__texto3{
     text-decoration: none;
     color: white !important; /*No me deja igual que el Nav*/
     font-size: 25px;
