--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,4 @@
 @import "./base/variables.scss";
 @import "./components/header.scss";
 @import "./components/footer.scss";
+@import "./components/home.scss";
