--- a/components/_home.scss
+++ b/components/_home.scss
@@ -33,7 +33,7 @@
         text-decoration: none;
         color: white !important; /*No me deja igual que el Nav*/
         font-size: 25px;
-        background-color: #FECF07;
+        background-color: $color-amarillo;
         padding: 4px 10px;
         border-radius: 10px;
     }
