--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
     /*Cabecera*/
 .cabecera{
-    background-color: rgb(189, 108, 20);
+    background-color: black;
 }
 .collapse{
    margin-right: 10px;
