--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,29 @@
+* {
+  margin: 0;
+  padding: 0; }
+
+@font-face {
+  font-family: poppins-extralight;
+  src: url(./tipografias/MuseoSans-300.otf); }
+
+@font-face {
+  font-family: jersey_m54;
+  src: url(./tipografias/Jersey_M54[1].ttf); }
+
+@font-face {
+  font-family: museosans_500;
+  src: url(./tipografias/MuseoSans_500_Italic.otf); }
+
+@font-face {
+  font-family: museosans_100;
+  src: url(./tipografias/MuseoSans-100.otf); }
+
+@font-face {
+  font-family: museosans_900;
+  src: url(./tipografias/MuseoSans_1.otf); }
+
 .cabecera {
-  background-color: #bd6c14; }
+  background-color: black; }
   .cabecera .cabecera__logo {
     width: 5rem;
     margin-left: 20px; }
@@ -54,3 +78,10 @@
     background-color: #FECF07;
     padding: 4px 10px;
     border-radius: 10px; }
+
+.footer {
+  background-color: black; }
+  .footer .secciones {
+    color: white; }
+    .footer .secciones__footer {
+      color: #FECF07; }
