--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import "./base/variables.scss";
+@import "./components/general.scss";
 @import "./components/header.scss";
-@import "./components/footer.scss";
 @import "./components/home.scss";
+@import "./components/footer.scss";
